# Mlops_cuda

./: CMakeLists.txt  app.py  bench_cnn_pytorch.py  bench_mlp_demo_pytorch.py  bench_mlp_pytorch.py  bench_pytorch.py  bench_rnn_pytorch.py  bench_rnn_pytroch.py  launch_cnn.sh  launch_demo.sh  launch_mlp.sh  launch_rnn.sh  pytorch_cnn_benchmark_results.txt
include/: cnn.hpp  cuda_kernels.cuh  mlp.hpp  mlp2.hpp  rnn.hpp  rnn2.hpp  rnnv2.hpp  utils.hpp
results/: benchmark_cnn.json  benchmark_cnn_pytorch.json  benchmark_rnn.json  benchmark_rnn2.json  benchmark_rnn_pytorch.json  cnn_benchmark.txt  cnn_benchmark_pytorch.txt  rnn2_benchmark.txt  rnn_benchmark.txt  rnn_benchmark_pytorch.txt
src/: cnn.cu  cuda_kernels.cu  main.cu  main_cnn.cu  main_demo.cu  main_mlp.cu  main_mlp2.cu  main_rnn.cu  main_rnn2.cu  mlp.cu  mlp2.cu  rnn.cu  rnn2.cu  rnnv2.cu  utils.cpp
weights/: mlp_in128_hid1024_out10.txt  mlp_in128_hid128_out10.txt  mlp_in128_hid256_out10.txt  mlp_in128_hid512_out10.txt  mlp_in128_hid64_out10.txt  rnn2_in256_hid256_seq64.txt  rnn_in128_hid128_seq64.txt  rnn_in128_hid64_seq32.txt  rnnv2_in256_hid512_seq128.txt  rnnv2_in256_hid512_seq64.txt
